--- a/projects/blue/THIMC/index.html
+++ b/projects/blue/THIMC/index.html
@@ -58,7 +58,7 @@
 			  scroll-padding-top: 5rem;
 			}
 
-			.navbar {
+			.documentation {
 			  display: block !important;
 			}
 		</style>
@@ -142,7 +142,7 @@
 		<main>		
 			<div class="container" id="header">
 				<h1 class="fw-bold">Tanghin in Minecraft</h1>
-				<p class="text-muted">20/2/2022</p>
+				<p class="text-muted">Last Modified: 20/2/2022</p>
 				<hr>
 				<nav>
 					<div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -195,17 +195,17 @@
 						<div class="container marketing mt15">
 							<div class="row">
 								<div class="col-lg-4">
-									<object width="40%" height="auto" data="./Tanghin in Minecraft/builder.png"></object>
+									<object width="40%" height="auto" data="./builder.png"></object>
 									<h2>Builder</h2>
 									<p>Jimmy Leung</p>
 								</div>
 								<div class="col-lg-4">
-									<object width="40%" height="auto" data="./Tanghin in Minecraft/engineering.png"></object>
+									<object width="40%" height="auto" data="./engineering.png"></object>
 									<h2>Engineering</h2>
 									<p>Bobby Chan, Jimmy Leung</p>
 								</div>
 								<div class="col-lg-4">
-									<object width="40%" height="auto" data="./Tanghin in Minecraft/advertiser.png"></object>
+									<object width="40%" height="auto" data="./advertiser.png"></object>
 									<h2>Advertising and Engineering Support</h2>
 									<p>Bill Kwok</p>
 								</div>
@@ -267,46 +267,46 @@
 					
 					<div class="tab-pane fade" id="nav-documentation" role="tabpanel" aria-labelledby="nav-documentation-tab">
 						<div class="row">
-							<nav class="navbar navbar-light bg-light flex-column align-items-stretch p-3 30%">
+							<nav class="documentation navbar-light bg-light flex-column align-items-stretch p-3 30%">
 							  <a class="navbar-brand">Contents</a>
 							  <nav class="nav nav-pills flex-column">
-								<a class="nav-link" href="#1&Installation">1 Installation</a>
-								<a class="nav-link" href="#1&Transportation">2 Transportation</a>
+								<a class="nav-link" href="Installation">1 Installation</a>
+								<a class="nav-link" href="Transportation">2 Transportation</a>
 								<nav class="nav nav-pills flex-column">
-								  <a class="nav-link ms-4 my-1" href="#1&Lift">2.1 Lift</a>
-								  <a class="nav-link ms-4 my-1" href="#1&Train">2.2 Train</a>
-								  <a class="nav-link ms-4 my-1" href="#1&Bus">2.3 Bus</a>
-								  <a class="nav-link ms-4 my-1" href="#1&Cable_car">2.4 Cable car</a>
+								  <a class="nav-link ms-4 my-1" href="Lift">2.1 Lift</a>
+								  <a class="nav-link ms-4 my-1" href="Train">2.2 Train</a>
+								  <a class="nav-link ms-4 my-1" href="Bus">2.3 Bus</a>
+								  <a class="nav-link ms-4 my-1" href="Cable_car">2.4 Cable car</a>
 								</nav>
-								<a class="nav-link" href="#1&Measurement">3 Measurement</a>
+								<a class="nav-link" href="Measurement">3 Measurement</a>
 
 							  </nav>
 							</nav>
 
 							<div class="70%" data-bs-spy="scroll" data-bs-offset="0" tabindex="0">
 								<br>
-								<h2 id="1&Installation">Installation</h2>
+								<h2 id="Installation">Installation</h2>
 								<hr>
 								<p>Save the .mcworld file to your computer. When you open the file, Minecraft will automatically import it. If that doesn't work, try changing the file extension to.zip and manually importing it.</p>
 								<br>
-								<h2 id="1&Transportation">Transportation</h2>
+								<h2 id="Transportation">Transportation</h2>
 								<hr>
 								<p>All moving machines within the map are controlled by commands. In this section, we will show off some of previous modes of transportation that we have created.</p>
 								<br>
-								<h3 id="1&Lift">Lift</h3>
+								<h3 id="Lift">Lift</h3>
 								<p>...</p>
 								<br>
-								<h3 id="1&Train">Train</h3>
+								<h3 id="Train">Train</h3>
 								<p>...</p>
 								<br>
-								<h3 id="1&Bus">Bus</h3>
+								<h3 id="Bus">Bus</h3>
 								<p>...</p>
 								<br>
-								<h3 id="1&Cable_car">Cable car</h3>
+								<h3 id="Cable_car">Cable car</h3>
 								<h4>1st Gen</h4>
 								<p>For the 1st Gen cable car, we used command blocks to make the ropes appear slimmer. However, the cable car's speed is very slow because all commands are executed on the cable car itself.</p>
 								<div class="row">
-									<img class="80%" height="100%" src="./Tanghin in Minecraft/cable_car_1st_gen.png">
+									<img class="80%" height="100%" src="./cable_car_1st_gen.png">
 									<div class="30%">
 										Flexibility
 										<div class="progress">
@@ -326,7 +326,7 @@
 								</div>
 								<br>
 								Flowchart:
-								<img width="100%" src="./Tanghin in Minecraft/cable_car_1st_gen.svg">
+								<img width="100%" src="./cable_car_1st_gen.svg">
 								<br>
 								Command used:
 <pre><code>/testfor
@@ -336,7 +336,7 @@
 /testforblock
 /title</code></pre>
 								<br>
-								<h2 id="1&Measurement">Measurement</h2>
+								<h2 id="Measurement">Measurement</h2>
 								<hr>
 								<p>...</p>
 							</div>
