--- a/projects/blue/Tanghin in Minecraft/overview.html
+++ b/projects/blue/Tanghin in Minecraft/overview.html
@@ -26,13 +26,13 @@
 	<button type="button" class="btn-close" style="position: fixed; top: 5rem; right: 3rem; z-index: 4;" onclick="document.getElementById('3D_viewer').style.display = 'none';"></button>
 </model-viewer>
 <button type="button" class="btn btn-outline-primary" onclick="document.getElementById('3D_viewer').style.display = 'block';">View in 3D</button>
-<a type="button" class="btn btn-outline-primary" href="https://github.com/projectgeorgia/Tanghin-in-Minecraft">View on GitHub</a>
+<!-- <a type="button" class="btn btn-outline-primary" href="https://github.com/projectgeorgia/Tanghin-in-Minecraft">View on GitHub</a> -->
 <div class="container marketing mt15">
 	<div class="row">
 		<div class="col-lg-4">
 			<object width="40%" height="auto" data="./Tanghin in Minecraft/builder.png"></object>
 			<h2>Builder</h2>
-			<p>Jimmy Leung</p>
+			<p>Keith Lei, Jimmy Leung</p>
 		</div>
 		<div class="col-lg-4">
 			<object width="40%" height="auto" data="./Tanghin in Minecraft/engineering.png"></object>
@@ -48,14 +48,15 @@
 </div>
 <h2>Upcoming releases</h2>
 <hr>
-<p>The v3.0 version will be available before the end of 2023. There will be support for Minecraft Java Edition, as well as significant improvements to the entire map. Keep an eye out!</p>
+<p>The v3.0 version will be available before the end of 2024 (delayed from 2023). There will be support for Minecraft Java Edition, as well as significant improvements to the entire map. Keep an eye out!</p>
 <br>
-<h2>What's new in v2.1</h2>
+<h2>What's new in v2.2 (40 Anniversary Edition)</h2>
 <hr>
-<p>- New design of drinking fountain<br>- Alarm cycle extended to one minute<br>- Removal of construction marks<br>- Ability to switch on/off alarm</p>
+<p>One new minigame alongside with minor tweaks</p>
 <br>
 <h2>References</h2>
 <hr>
+<a href="https://40.tanghin.edu.hk/">Tanghin 40th Anniversary</a><br>
 <a href="http://openday.tanghin.edu.hk/">Tanghin 35th Anniversary</a><br>
 <a href="https://earth.app.goo.gl/?apn=com.google.earth&ibi=com.google.b612&isi=293622097&ius=googleearth&link=https%3a%2f%2fearth.google.com%2fweb%2f%4022.499271,114.129214,24.88141394a,1705.10619243d,35y,0h,45t,0r%2fdata%3dCmwaahJiCiUweDM0MDNmNjE2ZDViN2JlZmY6MHgyZmY0MTlmZTM1YmE5OTdmGVrXaDnQfzZAIdwLzApFiFxAKifpppnmuK_pgZPmlZnoga_lkIjmnIPphKfpoa_ntIDlv7XkuK3lrbgYAiABKAIoAg">Google Earth - Tanghin</a>
 <br>
