--- a/projects/blue/Tanghin in Minecraft/overview.html
+++ b/projects/blue/Tanghin in Minecraft/overview.html
@@ -62,6 +62,6 @@
 <br>
 <br>
 <br>
-<h2>Contact</h2>
+<!-- <h2>Contact</h2>
 <hr>
-<p>You can contact the builders through creating issues on <a href="https://github.com/projectgeorgia/Tanghin-in-Minecraft/issues">GitHub</a>.</p>
+<p>You can contact the builders through creating issues on <a href="https://github.com/projectgeorgia/Tanghin-in-Minecraft/issues">GitHub</a>.</p> -->
