--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
 				</div>
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
-					<img src="./img/intro.jpg" class="d-block w-100" style="object-fit: cover;">
+					<img src="./projects/blue/Tanghin in Minecraft/1.jpg" class="d-block w-100" style="object-fit: cover;">
 
 					<div class="container">
 					  <div class="carousel-caption text-start">
-						<h1>Project Georgia</h1>
-						<p>A place full of little dreams.</p>
-						<p><a class="btn btn-lg btn-light" href="./about">Learn more</a></p>
+						<h1>Tanghin in Minecraft</h1>
+						<p>Replication of Tanghin in Minecraft, with a brand new minigame.</p>
+						<p><a class="btn btn-lg btn-light" href="./about">Browse project</a></p>
 					  </div>
 					</div>
 				  </div>
