--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 					  <div class="carousel-caption text-start">
 						<h1>Tanghin in Minecraft</h1>
 						<p>Replication of Tanghin in Minecraft, with a brand new minigame.</p>
-						<p><a class="btn btn-lg btn-light" href="./about">Browse project</a></p>
+						<p><a class="btn btn-lg btn-light" href="./projects/blue/view#1">Browse project</a></p>
 					  </div>
 					</div>
 				  </div>
