--- a/projects/blue/Tanghin in Minecraft/overview.html
+++ b/projects/blue/Tanghin in Minecraft/overview.html
@@ -25,7 +25,7 @@
 <model-viewer style="width: 100vw; height: 100vh; position: fixed; top: 0px; left: 0px; z-index: 3; overflow: auto; background-color: #FFFFFF; display: none;" id="3D_viewer" shadow-intensity="1" src="./Tanghin in Minecraft/model.glb" alt="3D" auto-rotate camera-controls poster="">
 	<button type="button" class="btn-close" style="position: fixed; top: 5rem; right: 3rem; z-index: 4;" onclick="document.getElementById('3D_viewer').style.display = 'none';"></button>
 </model-viewer>
-<span>The above images were captured with the "Vanilla RTX" ray tracing capable texture pack being installed, which is not included in the project.</span><br>
+<span>The above images were captured with the "Vanilla RTX" texture pack installed, which is not included in the project.</span><br><br>
 <button type="button" class="btn btn-outline-primary" onclick="document.getElementById('3D_viewer').style.display = 'block';">View in 3D (v2.1)</button>
 <!-- <a type="button" class="btn btn-outline-primary" href="https://github.com/projectgeorgia/Tanghin-in-Minecraft">View on GitHub</a> -->
 <div class="container marketing mt15">
