--- a/projects/blue/Tanghin in Minecraft/overview.html
+++ b/projects/blue/Tanghin in Minecraft/overview.html
@@ -32,17 +32,17 @@
 	<div class="row">
 		<div class="col-lg-4">
 			<object width="40%" height="auto" data="./Tanghin in Minecraft/builder.png"></object>
-			<h2>Builder</h2>
-			<p>Keith Lei, Jimmy Leung</p>
+			<h2>Builders</h2>
+			<p>Keith Lei, Bobby Chan, Jimmy Leung</p>
 		</div>
 		<div class="col-lg-4">
 			<object width="40%" height="auto" data="./Tanghin in Minecraft/engineering.png"></object>
-			<h2>Engineering</h2>
-			<p>Bobby Chan, Jimmy Leung</p>
+			<h2>Redstone Engineering</h2>
+			<p>Jimmy Leung</p>
 		</div>
 		<div class="col-lg-4">
 			<object width="40%" height="auto" data="./Tanghin in Minecraft/advertiser.png"></object>
-			<h2>Advertising and Engineering Support</h2>
+			<h2>Advertiser</h2>
 			<p>Bill Kwok</p>
 		</div>
 	</div>
@@ -58,7 +58,7 @@
 <h2>References</h2>
 <hr>
 <a href="https://40.tanghin.edu.hk/">Tanghin 40th Anniversary</a><br>
-<a href="http://openday.tanghin.edu.hk/">Tanghin 35th Anniversary</a><br>
+<a href="http://openday.tanghin.edu.hk/">Tanghin 35th Anniversary (no longer working)</a><br>
 <a href="https://earth.app.goo.gl/?apn=com.google.earth&ibi=com.google.b612&isi=293622097&ius=googleearth&link=https%3a%2f%2fearth.google.com%2fweb%2f%4022.499271,114.129214,24.88141394a,1705.10619243d,35y,0h,45t,0r%2fdata%3dCmwaahJiCiUweDM0MDNmNjE2ZDViN2JlZmY6MHgyZmY0MTlmZTM1YmE5OTdmGVrXaDnQfzZAIdwLzApFiFxAKifpppnmuK_pgZPmlZnoga_lkIjmnIPphKfpoa_ntIDlv7XkuK3lrbgYAiABKAIoAg">Google Earth - Tanghin</a>
 <br>
 <br>
