--- a/projects/blue/Tanghin in Minecraft/overview.html
+++ b/projects/blue/Tanghin in Minecraft/overview.html
@@ -53,7 +53,7 @@
 <br>
 <h2>What's new in v2.2 (40 Anniversary Edition)</h2>
 <hr>
-<p>One new minigame alongside with minor tweaks</p>
+<p>-Added a brand new minigame<br>-Minor tweaks on designs</p>
 <br>
 <h2>References</h2>
 <hr>
